--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 14:59+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Czech <https://l10n.opensuse.org/projects/snapper/master/cs/>\n"
@@ -178,6 +178,20 @@ msgstr "%1$s nebo %2$s"
 msgid "%1$s, %2$s"
 msgstr "%1$s, %2$s"
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -227,6 +241,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -327,6 +353,9 @@ msgstr "--print-number, -p"
 msgid "--quiet, -q"
 msgstr "--quiet, -q"
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr "--read-only"
 
@@ -365,6 +394,9 @@ msgstr "--verbose, -v"
 
 msgid "--version"
 msgstr "--version"
+
+msgid "A backup-config must be specified to run this command."
+msgstr ""
 
 # SLE12
 msgid "ACL error."
@@ -407,6 +439,10 @@ msgstr "Nelze zjistit ambit, protože výchozí podsvazek není znám."
 
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr "Nelze provést rollback, protože výchozí podsvazek není znám."
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
+msgstr ""
 
 msgid "Character separator for CSV output format."
 msgstr "Oddělovací znak pro výstupní formát CSV."
@@ -492,6 +528,10 @@ msgid "Command 'status' needs one argument."
 msgstr "Příkaz 'status' vyžaduje jeden argument."
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "Příkaz 'create' nepřijímá žádné parametry."
+
+#, fuzzy
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "Příkaz 'create' nepřijímá žádné parametry."
 
@@ -500,6 +540,10 @@ msgstr "Příkaz 'umount' vyžaduje alespoň jeden parametr."
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr "Příkaz 'undochange' vyžaduje alespoň jeden parametr."
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "Příkaz 'status' vyžaduje jeden argument."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Příkaz 'xadiff' vyžaduje alespoň jeden parametr."
@@ -865,6 +909,9 @@ msgstr "Výstupní formát CSV bez hlavičkového řádku."
 msgid "No permissions."
 msgstr "Chybí oprávnění."
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr "Číslo odpovídajícího předsnímku."
 
@@ -894,6 +941,10 @@ msgstr "Volba --from je podporována jen u snímků typu single."
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "Volba --read-write je podporována jen pro snímky typu single."
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    Volby pro příkaz 'list':"
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr "P"
@@ -901,6 +952,10 @@ msgstr "P"
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr "PB"
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Soubor '%s' nenalezen."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -948,6 +1003,9 @@ msgstr "Popis snímků."
 msgid "Probing target snapshots."
 msgstr "Popis snímků."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Chyba kvóty (%s)."
@@ -960,6 +1018,13 @@ msgstr "Přečte soubory pro příkaz diff ze souboru."
 
 msgid "Read-Only"
 msgstr "Pouze pro čtení"
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Mazání snímku selhalo."
 
 msgid "Run command and create pre and post snapshots."
 msgstr "Spustit příkaz a vytvořit snímky před a po."
@@ -985,6 +1050,21 @@ msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1077,6 +1157,10 @@ msgid "Snapshot '%u' not found."
 msgstr "Snímek '%u' nebyl nalezen."
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "Nastaví snímek jen pro čtení."
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "Nastaví snímek jen pro čtení."
 
@@ -1103,6 +1187,9 @@ msgstr ""
 
 msgid "Subvolume"
 msgstr "Podřízená jednotka"
+
+msgid "Supported modes:"
+msgstr ""
 
 msgid "Suppress normal output."
 msgstr "Potlačí normální výstup."
@@ -1143,6 +1230,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1205,9 +1295,17 @@ msgstr "Neznámá konfigurace."
 msgid "Unknown global option '%s'."
 msgstr "Neznámá globální volba '%s'."
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Neznámý typ '%s'."
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Neznámá volba '%s' pro příkaz '%s'."
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Neznámý příkaz '%s'."
 
 #, c-format
 msgid "Unknown type '%s'."
@@ -1309,10 +1407,17 @@ msgstr "\tsnapper list"
 msgid "snbk list-configs"
 msgstr "\tsnapper list-configs"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "\tsnapper delete <číslo>"
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
