--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: English (United Kingdom) <https://l10n.opensuse.org/projects/snapper/master/en_GB/>\n"
@@ -195,6 +195,20 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -242,6 +256,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -341,6 +367,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -378,6 +407,9 @@ msgid "--verbose, -v"
 msgstr ""
 
 msgid "--version"
+msgstr ""
+
+msgid "A backup-config must be specified to run this command."
 msgstr ""
 
 #, fuzzy
@@ -420,6 +452,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -523,6 +559,10 @@ msgid "Command 'status' needs one argument."
 msgstr "add needs one argument"
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "create needs at least 3 arguments"
+
+#, fuzzy
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "create needs at least 3 arguments"
 
@@ -533,6 +573,10 @@ msgstr "get needs at least one argument"
 #, fuzzy
 msgid "Command 'undochange' needs at least one argument."
 msgstr "get needs at least one argument"
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "add needs one argument"
 
 #, fuzzy
 msgid "Command 'xadiff' needs at least one argument."
@@ -915,6 +959,9 @@ msgstr ""
 msgid "No permissions."
 msgstr "Permissions denied"
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr ""
 
@@ -944,6 +991,9 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+msgid "Options for the 'visualize' command:"
+msgstr ""
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr ""
@@ -951,6 +1001,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "File %1 not found in the repository."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -1000,6 +1054,9 @@ msgstr "Created On: "
 msgid "Probing target snapshots."
 msgstr "Unknown type."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -1013,6 +1070,13 @@ msgstr ""
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Deleting the CA failed: %1."
 
 msgid "Run command and create pre and post snapshots."
 msgstr ""
@@ -1036,6 +1100,20 @@ msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1127,6 +1205,10 @@ msgid "Snapshot '%u' not found."
 msgstr "%s '%s' not found"
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "Parsing configuration files..."
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "Parsing configuration files..."
 
@@ -1153,6 +1235,9 @@ msgid "Source State"
 msgstr ""
 
 msgid "Subvolume"
+msgstr ""
+
+msgid "Supported modes:"
 msgstr ""
 
 msgid "Suppress normal output."
@@ -1194,6 +1279,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1261,8 +1349,16 @@ msgid "Unknown global option '%s'."
 msgstr "Unknown global option "
 
 #, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Unknown command '%s'"
+
+#, fuzzy, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Unknown option for %s, ignored: '%s'\n"
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Unknown command '%s'"
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1366,10 +1462,16 @@ msgstr ""
 "%s - create PAM config files\n"
 "\n"
 
+msgid "snbk restore [numbers]"
+msgstr ""
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
