--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: autoinst.fi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Estonian <https://l10n.opensuse.org/projects/snapper/master/et/>\n"
@@ -177,6 +177,20 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -225,6 +239,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -328,6 +354,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -370,6 +399,9 @@ msgstr ""
 msgid "--version"
 msgstr ""
 
+msgid "A backup-config must be specified to run this command."
+msgstr ""
+
 msgid "ACL error."
 msgstr "ACL viga."
 
@@ -409,6 +441,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -494,6 +530,10 @@ msgid "Command 'status' needs one argument."
 msgstr "Käsk 'status' vajab ühte argumenti."
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "Käsk 'create' ei vaja argumente."
+
+#, fuzzy
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "Käsk 'create' ei vaja argumente."
 
@@ -502,6 +542,10 @@ msgstr "Käsk 'umount' vajab vähemalt ühte argumenti."
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr "Käsk 'undochange' vajab vähemalt ühte argumenti."
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "Käsk 'status' vajab ühte argumenti."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Käsk 'xadiff' vajab vähemalt ühte argumenti."
@@ -878,6 +922,9 @@ msgstr ""
 msgid "No permissions."
 msgstr "Ligipääs puudub."
 
+msgid "Notice:"
+msgstr ""
+
 #, fuzzy
 msgid "Number of corresponding pre snapshot."
 msgstr "\t--pre-number <number>\t\tEelneva vastava hetketõmmise number."
@@ -910,6 +957,10 @@ msgstr "Valik - toetatakse ainult hetktõmmiseid tüübiga single."
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "Valik - muutmist toetatakse ainult hetktõmmiste tüübiga ühekordne jaoks."
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    Valikud 'list käsule:"
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr ""
@@ -918,6 +969,10 @@ msgstr ""
 #, fuzzy
 msgid "PB"
 msgstr "PB"
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Faili '%s' ei leitud."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -967,6 +1022,9 @@ msgstr "\t--description, -d <description>\tHetkekoopia kirjeldus."
 msgid "Probing target snapshots."
 msgstr "\t--description, -d <description>\tHetkekoopia kirjeldus."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 # error box title
 #, c-format
 msgid "Quota error (%s)."
@@ -982,6 +1040,13 @@ msgstr "\t--input, -i <file>\t\tLoeb faile erinevuste väljatoomiseks."
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Tõmmis kustutamine nurjus."
 
 #, fuzzy
 msgid "Run command and create pre and post snapshots."
@@ -1006,6 +1071,20 @@ msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1100,6 +1179,10 @@ msgid "Snapshot '%u' not found."
 msgstr "Tõmmist '%u' ei leita."
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "\t--read-only\t\t\tLoob ainult-loetava hetketõmmise."
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "\t--read-only\t\t\tLoob ainult-loetava hetketõmmise."
 
@@ -1126,6 +1209,9 @@ msgstr ""
 
 msgid "Subvolume"
 msgstr "Alamosa"
+
+msgid "Supported modes:"
+msgstr ""
 
 #, fuzzy
 msgid "Suppress normal output."
@@ -1170,6 +1256,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1234,9 +1323,17 @@ msgstr "Tundmatu seadistus."
 msgid "Unknown global option '%s'."
 msgstr "Tundmatu globaalne säte '%s'."
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Tundmatu käsk '%s'."
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Tundmatu säte '%s' käsu '%s' jaoks."
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Tundmatu käsk '%s'."
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1339,10 +1436,17 @@ msgstr "\tsnapper loetelu"
 msgid "snbk list-configs"
 msgstr "\tsnapper seadete loetelu"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "\tsnapper kustutamine <number>"
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
