--- a/po/ku.po
+++ b/po/ku.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: memory.ku.po\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Kurdish <https://l10n.opensuse.org/projects/snapper/master/ku/>\n"
@@ -187,6 +187,20 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -235,6 +249,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -334,6 +360,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -371,6 +400,9 @@ msgid "--verbose, -v"
 msgstr ""
 
 msgid "--version"
+msgstr ""
+
+msgid "A backup-config must be specified to run this command."
 msgstr ""
 
 #, fuzzy
@@ -413,6 +445,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -496,6 +532,9 @@ msgstr ""
 msgid "Command 'status' needs one argument."
 msgstr ""
 
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr ""
+
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr ""
 
@@ -503,6 +542,9 @@ msgid "Command 'umount' needs at least one argument."
 msgstr ""
 
 msgid "Command 'undochange' needs at least one argument."
+msgstr ""
+
+msgid "Command 'visualize' needs one argument."
 msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
@@ -873,6 +915,9 @@ msgstr ""
 msgid "No permissions."
 msgstr "Destûr"
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr ""
 
@@ -902,6 +947,9 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+msgid "Options for the 'visualize' command:"
+msgstr ""
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr ""
@@ -909,6 +957,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Pel nehat dîtin."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -957,6 +1009,9 @@ msgstr "Daxwiyanî"
 msgid "Probing target snapshots."
 msgstr "Xala girêdanê"
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Çewtî"
@@ -969,6 +1024,13 @@ msgstr ""
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Nivîsandina mîhengan têk çû"
 
 msgid "Run command and create pre and post snapshots."
 msgstr ""
@@ -992,6 +1054,20 @@ msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1083,6 +1159,10 @@ msgid "Snapshot '%u' not found."
 msgstr "Pakêta '%s' nehat dîtin."
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "Nivîsandina mîhengan têk çû"
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "Nivîsandina mîhengan têk çû"
 
@@ -1111,6 +1191,9 @@ msgstr ""
 #, fuzzy
 msgid "Subvolume"
 msgstr "&Deng"
+
+msgid "Supported modes:"
+msgstr ""
 
 msgid "Suppress normal output."
 msgstr ""
@@ -1151,6 +1234,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1214,9 +1300,17 @@ msgstr "Fermana Nenas: %1"
 msgid "Unknown global option '%s'."
 msgstr "Vebijêrka nenas: %1"
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Fermana Nenas: %1"
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Fermana Nenas: %1"
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1317,10 +1411,16 @@ msgstr ""
 msgid "snbk list-configs"
 msgstr "Pace Jê Bibe"
 
+msgid "snbk restore [numbers]"
+msgstr ""
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
