--- a/po/nb.po
+++ b/po/nb.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Norwegian Bokmål <https://l10n.opensuse.org/projects/snapper/master/nb_NO/>\n"
@@ -188,6 +188,20 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -236,6 +250,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -339,6 +365,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -379,6 +408,9 @@ msgid "--verbose, -v"
 msgstr ""
 
 msgid "--version"
+msgstr ""
+
+msgid "A backup-config must be specified to run this command."
 msgstr ""
 
 # error box title
@@ -422,6 +454,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -510,6 +546,10 @@ msgid "Command 'status' needs one argument."
 msgstr "Kommandoen 'status' trenger ett argument."
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "Kommandoen 'create' tar ikke argumenter."
+
+#, fuzzy
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "Kommandoen 'create' tar ikke argumenter."
 
@@ -519,6 +559,10 @@ msgstr "Kommandoen 'mount' trenger minst ett argument."
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr "Kommandoen 'undochange' trenger minst ett argument."
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "Kommandoen 'status' trenger ett argument."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Kommandoen «xadiff» trenger minst ett argument."
@@ -894,6 +938,9 @@ msgstr ""
 msgid "No permissions."
 msgstr "Ikke autorisert."
 
+msgid "Notice:"
+msgstr ""
+
 #, fuzzy
 msgid "Number of corresponding pre snapshot."
 msgstr "\t--pre-number <antall>\t\tAntall samsvarende før øyeblikksbilde."
@@ -925,6 +972,10 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    Valg for 'list'-kommandoen:"
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr ""
@@ -932,6 +983,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Filen '%s' ikke funnet."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -981,6 +1036,9 @@ msgstr "sammenligner øyeblikksbilder..."
 msgid "Probing target snapshots."
 msgstr "sammenligner øyeblikksbilder..."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -996,6 +1054,13 @@ msgstr "\t--input, -i <fil>\t\tLes filer der endringer skal angres."
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Diskbilde kunne ikke slettes."
 
 #, fuzzy
 msgid "Run command and create pre and post snapshots."
@@ -1020,6 +1085,20 @@ msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1115,6 +1194,10 @@ msgid "Snapshot '%u' not found."
 msgstr "Øyeblikksbildet '%u' ikke funnet."
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "Diskbilde kunne ikke opprettes."
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "Diskbilde kunne ikke opprettes."
 
@@ -1141,6 +1224,9 @@ msgstr ""
 
 msgid "Subvolume"
 msgstr "Undervolum"
+
+msgid "Supported modes:"
+msgstr ""
 
 #, fuzzy
 msgid "Suppress normal output."
@@ -1183,6 +1269,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1247,9 +1336,17 @@ msgstr "Ukjent oppsett."
 msgid "Unknown global option '%s'."
 msgstr "Ukjent globalt valg '%s'."
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Ukjent kommando '%s'."
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Ukjent valg '%s' for kommandoen '%s'."
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Ukjent kommando '%s'."
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1351,10 +1448,17 @@ msgstr "\tsnapper list"
 msgid "snbk list-configs"
 msgstr "\tsnapper list-configs"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "\tsnapper delete <nummer>"
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
