--- a/po/nl.po
+++ b/po/nl.po
@@ -9,11 +9,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-11-19 11:04+0000\n"
 "Last-Translator: Freek de Kruijf <freek@opensuse.org>\n"
-"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>"
-"\n"
+"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -182,6 +181,20 @@ msgstr "%1$s of %2$s"
 msgid "%1$s, %2$s"
 msgstr "%1$s, %2$s"
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr "'btrfs verzenden | btrfs ontvangen' is mislukt."
 
@@ -230,6 +243,19 @@ msgstr "(Doel) ontvangen UUID"
 
 msgid "(Target) UUID"
 msgstr "(Doel) UUID"
+
+#, fuzzy
+msgid "- A backup-config must be specified to run this command."
+msgstr "Alleen reservekopieconfiguratie met gespecificeerde doelmodus gebruiken."
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
+msgstr ""
 
 msgid "--abbreviate"
 msgstr "--abbreviate"
@@ -327,6 +353,9 @@ msgstr "--print-number, -p"
 msgid "--quiet, -q"
 msgstr "--quiet, -q"
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr "--read-only"
 
@@ -365,6 +394,10 @@ msgstr "--verbose, -v"
 
 msgid "--version"
 msgstr "--version"
+
+#, fuzzy
+msgid "A backup-config must be specified to run this command."
+msgstr "Alleen reservekopieconfiguratie met gespecificeerde doelmodus gebruiken."
 
 # error box title
 msgid "ACL error."
@@ -407,6 +440,10 @@ msgstr "Kan ambit niet detecteren omdat standaard subvolume onbekend is."
 
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr "Kan geen rollback doen omdat standaard subvolume onbekend is."
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
+msgstr ""
 
 msgid "Character separator for CSV output format."
 msgstr "Scheidingsteken voor CSV uitvoerformaat."
@@ -488,6 +525,10 @@ msgstr "Opdracht 'setup-quota' heeft geen argumenten."
 msgid "Command 'status' needs one argument."
 msgstr "Opdracht 'status' heeft één argument."
 
+#, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "Opdracht 'transfer-and-delete' heeft geen argumenten."
+
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "Opdracht 'transfer-and-delete' heeft geen argumenten."
 
@@ -496,6 +537,10 @@ msgstr "Opdracht 'umount' heeft minstens één argument."
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr "Opdracht 'undochange' heeft minstens één argument."
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "Opdracht 'status' heeft één argument."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Opdracht 'xadiff' heeft minstens één argument."
@@ -841,6 +886,9 @@ msgstr "Geen koppen voor CSV uitvoerformaat."
 msgid "No permissions."
 msgstr "Geen toegangsrechten."
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr "Nummer van overeenkomende eerdere momentopname."
 
@@ -870,6 +918,10 @@ msgstr "Optie --from alleen ondersteund voor momentopnamen van het type single(e
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "Optie --read-write alleen ondersteund voor momentopnamen van het type single(enkelvoudig)."
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    Opties voor opdracht 'list':"
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr "P"
@@ -877,6 +929,10 @@ msgstr "P"
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr "PB"
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Bestand '%s' niet gevonden."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -919,6 +975,9 @@ msgstr "Aftasten van momentopnamen van bron."
 msgid "Probing target snapshots."
 msgstr "Aftasten van momentopnamen van doel."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Qouta-fout (%s)."
@@ -931,6 +990,13 @@ msgstr "Bestanden naar diff lezen vanuit bestand."
 
 msgid "Read-Only"
 msgstr "Alleen-lezen"
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Momentopname %d verwijderen."
 
 msgid "Run command and create pre and post snapshots."
 msgstr "Voer opdracht uit en maak pre- en post-momentopnamen."
@@ -954,6 +1020,20 @@ msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] "Uitvoeren van lijst maken voor %d van %ld reservekopieconfiguratie is mislukt."
 msgstr[1] "Uitvoeren van lijst maken voor %d van %ld reservekopieconfiguraties is mislukt."
+
+#, fuzzy, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] "Uitvoeren van verwijderen voor %d van %ld reservekopieconfiguratie is mislukt."
+msgstr[1] "Uitvoeren van verwijderen voor %d van %ld reservekopieconfiguraties is mislukt."
+
+#, fuzzy, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr "Uitvoeren van verwijderen voor reservekopieconfiguratie '%s' is mislukt."
+
+#, fuzzy, c-format
+msgid "Running restore for backup config '%s'."
+msgstr "Uitvoeren van verwijderen voor reservekopieconfiguratie '%s'."
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1040,6 +1120,10 @@ msgstr "Standaard subvolume instellen naar momentopname %d."
 msgid "Snapshot '%u' not found."
 msgstr "Momentopname '%u' niet gevonden."
 
+#, fuzzy
+msgid "Snapshot already on source."
+msgstr "Momentopname is al op doel."
+
 msgid "Snapshot already on target."
 msgstr "Momentopname is al op doel."
 
@@ -1064,6 +1148,9 @@ msgstr "Status van bron"
 
 msgid "Subvolume"
 msgstr "Subvolume"
+
+msgid "Supported modes:"
+msgstr ""
 
 msgid "Suppress normal output."
 msgstr "Onderdruk normale uitvoer."
@@ -1105,6 +1192,9 @@ msgstr "Doel rm bin"
 
 msgid "Target rmdir bin"
 msgstr "Doel rmdir bin"
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
+msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "De ambit kan handmatig worden gespecificeerd met de optie --ambit."
@@ -1165,9 +1255,17 @@ msgstr "Onbekende configuratie."
 msgid "Unknown global option '%s'."
 msgstr "Onbekende globale optie '%s'."
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Onbekend type '%s'."
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Onbekende optie '%s' voor opdracht '%s'."
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Onbekende opdracht '%s'."
 
 #, c-format
 msgid "Unknown type '%s'."
@@ -1263,11 +1361,18 @@ msgstr "snbk list"
 msgid "snbk list-configs"
 msgstr "snbk list-configs"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "snbk delete [nummers]"
+
 msgid "snbk transfer [numbers]"
 msgstr "snbk transfer [nummers]"
 
 msgid "snbk transfer-and-delete"
 msgstr "snbk transfer-and-delete"
+
+msgid "snbk visualize <mode>"
+msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "gebruik: snapper [--global-options] <opdracht> [--commando-options] [commando-arguments]"
