--- a/po/pl.po
+++ b/po/pl.po
@@ -9,17 +9,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-11-26 23:04+0000\n"
 "Last-Translator: Szymon Scholz <raspherdev@pm.me>\n"
-"Language-Team: Polish <https://l10n.opensuse.org/projects/snapper/master/pl/>"
-"\n"
+"Language-Team: Polish <https://l10n.opensuse.org/projects/snapper/master/pl/>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && "
-"(n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 5.14.3\n"
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
@@ -183,6 +181,20 @@ msgstr "%1$s lub %2$s"
 msgid "%1$s, %2$s"
 msgstr "%1$s, %2$s"
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr "'btrfs send | btrfs receive' nie powiodło się."
 
@@ -230,6 +242,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -333,6 +357,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -375,6 +402,9 @@ msgstr ""
 msgid "--version"
 msgstr ""
 
+msgid "A backup-config must be specified to run this command."
+msgstr ""
+
 msgid "ACL error."
 msgstr "Błąd ACL."
 
@@ -414,6 +444,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -499,6 +533,10 @@ msgid "Command 'status' needs one argument."
 msgstr "Polecenie 'status' wymaga jednego argumentu."
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "Polecenie 'create' nie przyjmuje argumentów."
+
+#, fuzzy
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "Polecenie 'create' nie przyjmuje argumentów."
 
@@ -507,6 +545,10 @@ msgstr "Polecenie unmount wymaga co najmniej jednego argumentu."
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr "Polecenie 'undochange' wymaga co najmniej jednego argumentu."
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "Polecenie 'status' wymaga jednego argumentu."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Polecenie 'xadiff' wymaga podania co najmniej jednego argumentu."
@@ -880,6 +922,9 @@ msgstr ""
 msgid "No permissions."
 msgstr "Brak uprawnień."
 
+msgid "Notice:"
+msgstr ""
+
 #, fuzzy
 msgid "Number of corresponding pre snapshot."
 msgstr "\t--pre-number <numer>\t\tLiczba odpowiednich zrzutów typu pre."
@@ -912,6 +957,10 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    Opcje dla polecenia 'list':"
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr ""
@@ -920,6 +969,10 @@ msgstr ""
 #, fuzzy
 msgid "PB"
 msgstr "PiB"
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Nie znaleziono pliku '%s'."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -969,6 +1022,9 @@ msgstr "porównanie zrzutów..."
 msgid "Probing target snapshots."
 msgstr "porównanie zrzutów..."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Błąd przydziału (%s)."
@@ -983,6 +1039,13 @@ msgstr "\t--input, -i <plik>\t\tWczytuje pliki do polecenia diff z pliku."
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Usuwanie zrzutu nie powiodło się (%s)."
 
 #, fuzzy
 msgid "Run command and create pre and post snapshots."
@@ -1009,6 +1072,21 @@ msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1105,6 +1183,10 @@ msgid "Snapshot '%u' not found."
 msgstr "Nie znaleziono zrzutu '%u'."
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "Tworzenie zrzutu nie powiodło się (%s)."
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "Tworzenie zrzutu nie powiodło się (%s)."
 
@@ -1131,6 +1213,9 @@ msgstr ""
 
 msgid "Subvolume"
 msgstr "Podwolumen"
+
+msgid "Supported modes:"
+msgstr ""
 
 #, fuzzy
 msgid "Suppress normal output."
@@ -1175,6 +1260,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1239,9 +1327,17 @@ msgstr "Nieznana konfiguracja."
 msgid "Unknown global option '%s'."
 msgstr "Nieznana opcja globalna '%s'."
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Nieznane polecenie '%s'."
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Nieznana opcja '%s' dla polecenia  '%s'."
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Nieznane polecenie '%s'."
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1344,10 +1440,17 @@ msgstr "\tsnapper list"
 msgid "snbk list-configs"
 msgstr "\tsnapper list-configs"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "\tsnapper delete <numer>"
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
