--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Turkish <https://l10n.opensuse.org/projects/snapper/master/tr/>\n"
@@ -223,6 +223,20 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -271,6 +285,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -375,6 +401,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -417,6 +446,9 @@ msgstr ""
 msgid "--version"
 msgstr ""
 
+msgid "A backup-config must be specified to run this command."
+msgstr ""
+
 msgid "ACL error."
 msgstr ""
 
@@ -456,6 +488,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -557,6 +593,10 @@ msgid "Command 'status' needs one argument."
 msgstr "'statü' komutu için bir argüman gereklidir."
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "'oluştur' komutu argüman almamaktadır."
+
+#, fuzzy
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "'oluştur' komutu argüman almamaktadır."
 
@@ -567,6 +607,10 @@ msgstr "'çerçevele' komutu için en az bir argüman gereklidir."
 #, fuzzy
 msgid "Command 'undochange' needs at least one argument."
 msgstr "'değişiklikleri geri al' komutu için en az bir argüman gereklidir."
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "'statü' komutu için bir argüman gereklidir."
 
 #, fuzzy
 msgid "Command 'xadiff' needs at least one argument."
@@ -952,6 +996,9 @@ msgstr ""
 msgid "No permissions."
 msgstr ""
 
+msgid "Notice:"
+msgstr ""
+
 #, fuzzy
 msgid "Number of corresponding pre snapshot."
 msgstr "\t--ön-numara <number>\t\tİlgili önceki anlık görüntü numarası."
@@ -982,6 +1029,10 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    'list' komutu için seçenekler:"
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr "P"
@@ -989,6 +1040,10 @@ msgstr "P"
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr "PB"
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "'%s' dosyası bulunamadı."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -1042,6 +1097,9 @@ msgstr "Anlık görüntüler karşılaştırılıyor..."
 msgid "Probing target snapshots."
 msgstr "Anlık görüntüler karşılaştırılıyor..."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 # include/ui/common_messages.ycp:95
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -1057,6 +1115,13 @@ msgstr "\t--giriş, -i <file>\t\tDosyadan değişiklikleri geri almak için dosy
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Yapılandırma oluşturma başarısız oldu (%s)."
 
 msgid "Run command and create pre and post snapshots."
 msgstr ""
@@ -1080,6 +1145,20 @@ msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1175,6 +1254,10 @@ msgid "Snapshot '%u' not found."
 msgstr "'%u' anlık görüntüsü bulunamadı."
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "Yapılandırma oluşturma başarısız oldu (%s)."
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "Yapılandırma oluşturma başarısız oldu (%s)."
 
@@ -1202,6 +1285,9 @@ msgstr ""
 #, fuzzy
 msgid "Subvolume"
 msgstr "Arkases"
+
+msgid "Supported modes:"
+msgstr ""
 
 #, fuzzy
 msgid "Suppress normal output."
@@ -1244,6 +1330,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1311,8 +1400,16 @@ msgid "Unknown global option '%s'."
 msgstr "Bilinmeyen '%s' evrensel seçeneği."
 
 #, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "'Bilinmeyen komut '%s'."
+
+#, fuzzy, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Bilinmeyen '%s' seçeneği; '%s' komutu için."
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "'Bilinmeyen komut '%s'."
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1416,10 +1513,17 @@ msgstr "\tyakalayıcı listele"
 msgid "snbk list-configs"
 msgstr "\tyakalayıcı yapılandırmayı listele"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "\tyakalayıcı silme <number>"
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 #, fuzzy
