--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-08-05 05:59+0000\n"
 "Last-Translator: Grace Yu <grace.yu@excel-gits.com>\n"
 "Language-Team: Chinese (Taiwan) <https://l10n.opensuse.org/projects/snapper/master/zh_TW/>\n"
@@ -196,6 +196,20 @@ msgstr "%1$s 或 %2$s"
 msgid "%1$s, %2$s"
 msgstr "%1$s，%2$s"
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr "'btrfs send | btrfs receive' 失敗。"
 
@@ -245,6 +259,19 @@ msgstr "(目標) 收到的 UUID"
 
 msgid "(Target) UUID"
 msgstr "(目標) UUID"
+
+#, fuzzy
+msgid "- A backup-config must be specified to run this command."
+msgstr "僅在指定的目標模式下使用備份組態。"
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
+msgstr ""
 
 msgid "--abbreviate"
 msgstr "--abbreviate"
@@ -342,6 +369,9 @@ msgstr "--print-number、-p"
 msgid "--quiet, -q"
 msgstr "--quiet、-q"
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr "--read-only"
 
@@ -380,6 +410,10 @@ msgstr "--verbose、-v"
 
 msgid "--version"
 msgstr "--version"
+
+#, fuzzy
+msgid "A backup-config must be specified to run this command."
+msgstr "僅在指定的目標模式下使用備份組態。"
 
 # SLE12
 msgid "ACL error."
@@ -422,6 +456,10 @@ msgstr "無法偵測範圍，因為預設子磁碟區未知。"
 
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr "無法復原，因為預設子磁碟區未知。"
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
+msgstr ""
 
 msgid "Character separator for CSV output format."
 msgstr "CSV 輸出格式的字元分隔符。"
@@ -511,6 +549,10 @@ msgstr "指令「setup-quota」不需要引數。"
 msgid "Command 'status' needs one argument."
 msgstr "命令 'status' 需要一個參數。"
 
+#, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "指令 'transfer-and-delete' 不接受引數。"
+
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "指令 'transfer-and-delete' 不接受引數。"
 
@@ -519,6 +561,10 @@ msgstr "指令「umount」至少需要一個引數。"
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr "命令 'undochange' 需要至少一個參數。"
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "命令 'status' 需要一個參數。"
 
 # SLE12
 msgid "Command 'xadiff' needs at least one argument."
@@ -893,6 +939,9 @@ msgstr "CSV 輸出格式不含標題。"
 msgid "No permissions."
 msgstr "無許可權。"
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr "對應前快照的編號。"
 
@@ -923,6 +972,10 @@ msgstr "選項 --from 僅適用於單一類型的快照。"
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "選項 --read-write 僅適用於單一類型的快照。"
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    'list' 命令的選項："
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr "P"
@@ -930,6 +983,10 @@ msgstr "P"
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr "PB"
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "檔案 '%s' 找不到。"
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -973,6 +1030,9 @@ msgstr "正在查探來源快照。"
 msgid "Probing target snapshots."
 msgstr "正在查探目標快照。"
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "定額錯誤 (%s)。"
@@ -985,6 +1045,14 @@ msgstr "讀取要與指定檔案比較差異的檔案。"
 
 msgid "Read-Only"
 msgstr "唯讀"
+
+msgid "Restore:"
+msgstr ""
+
+# SLE12
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "正在刪除快照 %d。"
 
 # SLE12
 msgid "Run command and create pre and post snapshots."
@@ -1007,6 +1075,19 @@ msgstr "正在針對備份組態 '%s' 執行刪除操作。"
 msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] "針對 %d 個備份組態 (共 %ld 個) 執行的列出操作失敗。"
+
+#, fuzzy, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] "針對 %d 個備份組態 (共 %ld 個) 執行的刪除操作失敗。"
+
+#, fuzzy, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr "針對備份組態 '%s' 執行的刪除操作失敗。"
+
+#, fuzzy, c-format
+msgid "Running restore for backup config '%s'."
+msgstr "正在針對備份組態 '%s' 執行刪除操作。"
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1093,6 +1174,10 @@ msgstr "正在將預設子磁碟區設定為快照 %d。"
 msgid "Snapshot '%u' not found."
 msgstr "快照 '%u' 找不到。"
 
+#, fuzzy
+msgid "Snapshot already on source."
+msgstr "目標中已存在該快照。"
+
 msgid "Snapshot already on target."
 msgstr "目標中已存在該快照。"
 
@@ -1120,6 +1205,9 @@ msgstr "來源狀態"
 # SLE12
 msgid "Subvolume"
 msgstr "子磁碟區"
+
+msgid "Supported modes:"
+msgstr ""
 
 msgid "Suppress normal output."
 msgstr "不顯示一般輸出。"
@@ -1162,6 +1250,9 @@ msgstr "目標 rm bin"
 
 msgid "Target rmdir bin"
 msgstr "目標 rmdir bin"
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
+msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "可以使用 --ambit 選項以手動方式指定範圍。"
@@ -1226,9 +1317,17 @@ msgstr "未知的組態檔。"
 msgid "Unknown global option '%s'."
 msgstr "未知的全域選項 '%s'。"
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "未知類型 \"%s\"。"
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "未知選項 '%s'，命令 '%s'。"
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "未知的命令 '%s'。"
 
 #, c-format
 msgid "Unknown type '%s'."
@@ -1333,11 +1432,18 @@ msgstr "snbk list"
 msgid "snbk list-configs"
 msgstr "snbk list-configs"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "snbk delete [編號]"
+
 msgid "snbk transfer [numbers]"
 msgstr "snbk transfer [編號]"
 
 msgid "snbk transfer-and-delete"
 msgstr "snbk transfer-and-delete"
+
+msgid "snbk visualize <mode>"
+msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "用法： snapper [--全域選項] <命令> [--命令選項] [命令參數]"
