--- a/po/bs.po
+++ b/po/bs.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Bosnian <https://l10n.opensuse.org/projects/snapper/master/bs/>\n"
@@ -174,6 +174,20 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -222,6 +236,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -320,6 +346,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -357,6 +386,9 @@ msgid "--verbose, -v"
 msgstr ""
 
 msgid "--version"
+msgstr ""
+
+msgid "A backup-config must be specified to run this command."
 msgstr ""
 
 #, fuzzy
@@ -400,6 +432,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -482,6 +518,9 @@ msgstr ""
 msgid "Command 'status' needs one argument."
 msgstr ""
 
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr ""
+
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr ""
 
@@ -489,6 +528,9 @@ msgid "Command 'umount' needs at least one argument."
 msgstr ""
 
 msgid "Command 'undochange' needs at least one argument."
+msgstr ""
+
+msgid "Command 'visualize' needs one argument."
 msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
@@ -857,6 +899,9 @@ msgstr ""
 msgid "No permissions."
 msgstr ""
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr ""
 
@@ -886,6 +931,9 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+msgid "Options for the 'visualize' command:"
+msgstr ""
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr ""
@@ -893,6 +941,11 @@ msgstr ""
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr ""
+
+# %s is e.g. ext3 or reiserfs
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Pronađen %s datotečni sistem."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -938,6 +991,9 @@ msgstr "Opis"
 msgid "Probing target snapshots."
 msgstr "%s podešavanje nije uspjelo."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Greška"
@@ -950,6 +1006,14 @@ msgstr ""
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+# %s is either BOOTP or DHCP
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "%s podešavanje nije uspjelo."
 
 msgid "Run command and create pre and post snapshots."
 msgstr ""
@@ -975,6 +1039,21 @@ msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1070,6 +1149,11 @@ msgstr "Pronađen %s datotečni sistem."
 
 # %s is either BOOTP or DHCP
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "%s podešavanje nije uspjelo."
+
+# %s is either BOOTP or DHCP
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "%s podešavanje nije uspjelo."
 
@@ -1098,6 +1182,9 @@ msgid "Source State"
 msgstr ""
 
 msgid "Subvolume"
+msgstr ""
+
+msgid "Supported modes:"
 msgstr ""
 
 msgid "Suppress normal output."
@@ -1139,6 +1226,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1204,9 +1294,17 @@ msgstr "Ne mogu pokrenuti naredbu \"%s\""
 msgid "Unknown global option '%s'."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Ne mogu pokrenuti naredbu \"%s\""
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Ne mogu pokrenuti naredbu \"%s\""
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1306,10 +1404,16 @@ msgstr ""
 msgid "snbk list-configs"
 msgstr ""
 
+msgid "snbk restore [numbers]"
+msgstr ""
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
