--- a/po/el.po
+++ b/po/el.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 14:59+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Greek <https://l10n.opensuse.org/projects/snapper/master/el/>\n"
@@ -182,6 +182,20 @@ msgstr "%1$s ή %2$s"
 msgid "%1$s, %2$s"
 msgstr "%1$s, %2$s"
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -230,6 +244,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -334,6 +360,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 #, fuzzy
 msgid "--read-only"
 msgstr "Μόνο για ανάγνωση"
@@ -377,6 +406,9 @@ msgstr ""
 msgid "--version"
 msgstr ""
 
+msgid "A backup-config must be specified to run this command."
+msgstr ""
+
 msgid "ACL error."
 msgstr "Σφάλμα ACL."
 
@@ -418,6 +450,10 @@ msgstr "Δεν είναι δυνατή η ανίχνευση της περιοχ
 
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr "Δεν είναι δυνατή η επαναφορά αφού ο προεπιλεγμένος υποόγκος είναι άγνωστος."
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
+msgstr ""
 
 #, fuzzy
 msgid "Character separator for CSV output format."
@@ -504,6 +540,10 @@ msgid "Command 'status' needs one argument."
 msgstr "Η εντολή 'status' χρειάζεται μία παράμετρο."
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "Η εντολή 'create' δεν δέχεται παραμέτρους."
+
+#, fuzzy
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "Η εντολή 'create' δεν δέχεται παραμέτρους."
 
@@ -512,6 +552,10 @@ msgstr "Η εντολή 'mount' χρειάζεται τουλάχιστον μί
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr "Η εντολή 'undochange' χρειάζεται τουλάχιστον μία παράμετρο."
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "Η εντολή 'status' χρειάζεται μία παράμετρο."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Η εντολή 'xadiff' χρειάζεται τουλάχιστον μια παράμετρο."
@@ -885,6 +929,9 @@ msgstr "\t--no-headers Δεν υπάρχουν κεφαλίδες για τη μ
 msgid "No permissions."
 msgstr "Χωρίς Δικαιώματα."
 
+msgid "Notice:"
+msgstr ""
+
 #, fuzzy
 msgid "Number of corresponding pre snapshot."
 msgstr "\t--pre-number <αριθμός>\t\tΑριθμός από αντίστοιχα προ-στιγμιότυπα."
@@ -918,6 +965,10 @@ msgstr "Η επιλογή --from υποστηρίζεται μόνο για στ
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "Η επιλογή --read-write υποστηρίζεται μόνο για στιγμιότυπα τύπου single."
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    Επιλογές για την εντολή 'list':"
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr "P"
@@ -926,6 +977,10 @@ msgstr "P"
 #, fuzzy
 msgid "PB"
 msgstr "PiB"
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Δεν βρέθηκε το αρχείο '%s'."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -975,6 +1030,9 @@ msgstr "Σύγκριση στιγμιοτύπων..."
 msgid "Probing target snapshots."
 msgstr "Σύγκριση στιγμιοτύπων..."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 # error box title
 #, c-format
 msgid "Quota error (%s)."
@@ -990,6 +1048,13 @@ msgstr "\t--input, -i <file>\t\tΑνάγνωση αρχείων που θα γί
 
 msgid "Read-Only"
 msgstr "Μόνο για ανάγνωση"
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Η διαγραφή στιγμιότυπου απέτυχε."
 
 #, fuzzy
 msgid "Run command and create pre and post snapshots."
@@ -1014,6 +1079,20 @@ msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1111,6 +1190,10 @@ msgid "Snapshot '%u' not found."
 msgstr "Δεν βρέθηκε στιγμιότυπο '%u'."
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "\t--read-only Ορίστε το στιγμιότυπο μόνο για ανάγνωση."
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "\t--read-only Ορίστε το στιγμιότυπο μόνο για ανάγνωση."
 
@@ -1137,6 +1220,9 @@ msgstr ""
 
 msgid "Subvolume"
 msgstr "Υποτόμος"
+
+msgid "Supported modes:"
+msgstr ""
 
 #, fuzzy
 msgid "Suppress normal output."
@@ -1181,6 +1267,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1247,9 +1336,17 @@ msgstr "Άγνωστη ρύθμιση."
 msgid "Unknown global option '%s'."
 msgstr "Άγνωστη γενική επιλογή '%s'."
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Άγνωστος τύπος '%s'."
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Άγνωστη επιλογή '%s' για την εντολή '%s'."
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Άγνωστη εντολή '%s'."
 
 #, c-format
 msgid "Unknown type '%s'."
@@ -1350,10 +1447,17 @@ msgstr "\tsnapper list"
 msgid "snbk list-configs"
 msgstr "\tsnapper list-configs"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "\tsnapper delete <number>"
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
