--- a/po/es.po
+++ b/po/es.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-08-03 17:59+0000\n"
 "Last-Translator: Antonio Simón <antonio@trans-mission.com>\n"
 "Language-Team: Spanish <https://l10n.opensuse.org/projects/snapper/master/es/>\n"
@@ -177,6 +177,20 @@ msgstr "%1$s o %2$s"
 msgid "%1$s, %2$s"
 msgstr "%1$s, %2$s"
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr "'btrfs send | btrfs receive' ha fallado."
 
@@ -226,6 +240,19 @@ msgstr "(Destino) UUID Recibido"
 
 msgid "(Target) UUID"
 msgstr "(Destino) UUID"
+
+#, fuzzy
+msgid "- A backup-config must be specified to run this command."
+msgstr "Sólo usar configuración de respaldo con el modo de destino especificado."
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
+msgstr ""
 
 msgid "--abbreviate"
 msgstr "--abbreviate"
@@ -323,6 +350,9 @@ msgstr "--print-number, -p"
 msgid "--quiet, -q"
 msgstr "--quiet, -q"
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr "--read-only"
 
@@ -361,6 +391,10 @@ msgstr "--verbose, -v"
 
 msgid "--version"
 msgstr "--version"
+
+#, fuzzy
+msgid "A backup-config must be specified to run this command."
+msgstr "Sólo usar configuración de respaldo con el modo de destino especificado."
 
 # SLE12
 msgid "ACL error."
@@ -403,6 +437,10 @@ msgstr "No se puede detectar el ámbito porque no se conoce el subvolumen por de
 
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr "No se puede revertir porque no se conoce el subvolumen por defecto."
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
+msgstr ""
 
 msgid "Character separator for CSV output format."
 msgstr "Separador de caracteres para el formato de salida CSV."
@@ -487,6 +525,10 @@ msgstr "El comando 'setup-quota' no tiene argumentos."
 msgid "Command 'status' needs one argument."
 msgstr "El comando 'status' necesita un argumento."
 
+#, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "El comando 'transfer-and-delete' no toma argumentos."
+
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "El comando 'transfer-and-delete' no toma argumentos."
 
@@ -495,6 +537,10 @@ msgstr "El comando 'unmount' necesita al menos un argumento."
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr "El comando 'undochange' necesita al menos un argumento."
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "El comando 'status' necesita un argumento."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "El comando \"xadiff\" requiere al menos un argumento."
@@ -866,6 +912,9 @@ msgstr "No se usarán encabezados en el formato de salida CSV."
 msgid "No permissions."
 msgstr "Sin permisos."
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr "Número de la instantánea previa correspondiente."
 
@@ -895,6 +944,10 @@ msgstr "La opción --from solo se admite para instantáneas de tipo single."
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "La opción --read-write solo se admite para instantáneas de tipo single."
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    Opciones para el comando 'list':"
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr "P"
@@ -902,6 +955,10 @@ msgstr "P"
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr "PB"
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "No se ha encontrado el archivo '%s'."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -945,6 +1002,9 @@ msgstr "Buscando instantáneas de origen."
 msgid "Probing target snapshots."
 msgstr "Buscando instantáneas de destino."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Error de cuota (%s)."
@@ -957,6 +1017,13 @@ msgstr "Lee los archivos para diff desde el archivo."
 
 msgid "Read-Only"
 msgstr "De sólo lectura"
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Eliminando instantánea %d."
 
 msgid "Run command and create pre and post snapshots."
 msgstr "Ejecuta el comando y crea instantáneas previas y posteriores."
@@ -980,6 +1047,20 @@ msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] "La lista de ejecución falló para %d de %ld configuración de respaldo."
 msgstr[1] "La lista de ejecución falló para %d de %ld configuraciones de respaldo."
+
+#, fuzzy, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] "La eliminación falló para %d de %ld configuración de respaldo."
+msgstr[1] "La eliminación falló para %d de %ld configuraciones de respaldo."
+
+#, fuzzy, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr "La eliminación de la configuración de respaldo '%s' falló."
+
+#, fuzzy, c-format
+msgid "Running restore for backup config '%s'."
+msgstr "Eliminando la configuración de respaldo '%s'."
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1067,6 +1148,10 @@ msgstr "Definiendo subvolumen por defecto en instantánea %d."
 msgid "Snapshot '%u' not found."
 msgstr "Imagen '%u' no encontrada."
 
+#, fuzzy
+msgid "Snapshot already on source."
+msgstr "La instantánea ya está presente en el destino."
+
 msgid "Snapshot already on target."
 msgstr "La instantánea ya está presente en el destino."
 
@@ -1093,6 +1178,9 @@ msgstr "Estado de Origen"
 
 msgid "Subvolume"
 msgstr "Subvolumen"
+
+msgid "Supported modes:"
+msgstr ""
 
 msgid "Suppress normal output."
 msgstr "Elimina la salida normal."
@@ -1135,6 +1223,9 @@ msgstr "Destino de bin de rm"
 
 msgid "Target rmdir bin"
 msgstr "Destino de bin de rmdir"
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
+msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "El ámbito se puede especificar manualmente con la opción --ambit."
@@ -1195,9 +1286,17 @@ msgstr "Configuración desconocida."
 msgid "Unknown global option '%s'."
 msgstr "Opción global desconocida '%s'."
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Tipo %s desconocido."
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Opción desconocida '%s' para el comando '%s'."
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Comando '%s' desconocido."
 
 #, c-format
 msgid "Unknown type '%s'."
@@ -1300,11 +1399,18 @@ msgstr "snbk list"
 msgid "snbk list-configs"
 msgstr "snbk list-configs"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "snbk delete [números]"
+
 msgid "snbk transfer [numbers]"
 msgstr "snbk transfer [números]"
 
 msgid "snbk transfer-and-delete"
 msgstr "snbk transfer-and-delete"
+
+msgid "snbk visualize <mode>"
+msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "uso: snapper [--global-options] <comando> [--command-options] [argumentos-comando]"
