--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-09-03 14:59+0000\n"
 "Last-Translator: Arif Budiman <arifpedia@gmail.com>\n"
 "Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/id/>\n"
@@ -174,6 +174,20 @@ msgstr "%1$s atau %2$s"
 msgid "%1$s, %2$s"
 msgstr "%1$s, %2$s"
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr "'btrfs send | btrfs receive' gagal."
 
@@ -222,6 +236,19 @@ msgstr "(Target) Menerima UUID"
 
 msgid "(Target) UUID"
 msgstr "(Target) UUID"
+
+#, fuzzy
+msgid "- A backup-config must be specified to run this command."
+msgstr "Hanya gunakan backup-config dengan mode-target yang ditentukan."
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
+msgstr ""
 
 msgid "--abbreviate"
 msgstr "--abbreviate"
@@ -319,6 +346,9 @@ msgstr "--print-number, -p"
 msgid "--quiet, -q"
 msgstr "--quiet, -q"
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr "--read-only"
 
@@ -357,6 +387,10 @@ msgstr "--verbose, -v"
 
 msgid "--version"
 msgstr "--version"
+
+#, fuzzy
+msgid "A backup-config must be specified to run this command."
+msgstr "Hanya gunakan backup-config dengan mode-target yang ditentukan."
 
 msgid "ACL error."
 msgstr "Galat ACL."
@@ -398,6 +432,10 @@ msgstr "Tidak dapat mendeteksi ambit sejak subvolume bawaan tidak diketahui."
 
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr "Tidak dapat melakukan rollback karena subvolume bawaan tidak diketahui."
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
+msgstr ""
 
 msgid "Character separator for CSV output format."
 msgstr "Pemisah karakter untuk format output CSV."
@@ -479,6 +517,10 @@ msgstr "Perintah 'setup-quota' tidak mengambil argumen."
 msgid "Command 'status' needs one argument."
 msgstr "Perintah 'status' membutuhkan satu argumen."
 
+#, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "Perintah ' transfer-and-delete ' tidak menerima argumen."
+
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "Perintah ' transfer-and-delete ' tidak menerima argumen."
 
@@ -487,6 +529,10 @@ msgstr "Perintah 'unmount' membutuhkan setidaknya satu argumen."
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr "Perintah 'undochange' membutuhkan setidaknya satu argumen."
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "Perintah 'status' membutuhkan satu argumen."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Perintah 'xadiff' membutuhkan setidaknya satu argumen."
@@ -832,6 +878,9 @@ msgstr "Tidak ada header untuk format output CSV."
 msgid "No permissions."
 msgstr "Tidak ada izin."
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr "Jumlah pra snapshot yang sesuai."
 
@@ -861,6 +910,10 @@ msgstr "Opsi --from hanya didukung untuk snapshot dari tipe tunggal."
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "Opsi --read-write hanya didukung untuk snapshot dari tipe tunggal."
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    Opsi untuk perintah 'list':"
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr "P"
@@ -868,6 +921,10 @@ msgstr "P"
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr "PB"
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Berkas '%s' tidak ditemukan."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -910,6 +967,9 @@ msgstr "Memeriksa snapshot sumber."
 msgid "Probing target snapshots."
 msgstr "Memeriksa snapshot target."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Galat kuota (%s)."
@@ -922,6 +982,13 @@ msgstr "Baca berkas untuk membandingkan dari berkas."
 
 msgid "Read-Only"
 msgstr "Hanya-Baca"
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Menghapus snapshot %d."
 
 msgid "Run command and create pre and post snapshots."
 msgstr "Jalankan perintah dan buat snapshot sebelum dan setelah."
@@ -943,6 +1010,19 @@ msgstr "Proses penghapusan konfig cadangan '%s'."
 msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] "Proses menampilkan daftar gagal untuk %d dari %ld konfig cadangan."
+
+#, fuzzy, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] "Proses penghapusan gagal untuk %d dari %ld konfig cadangan."
+
+#, fuzzy, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr "Proses penghapusan konfig cadangan '%s'. gagal."
+
+#, fuzzy, c-format
+msgid "Running restore for backup config '%s'."
+msgstr "Proses penghapusan konfig cadangan '%s'."
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1027,6 +1107,10 @@ msgstr "Mengatur subvolume bawaan ke snapshot %d."
 msgid "Snapshot '%u' not found."
 msgstr "Snapshot '%u' tidak ditemukan."
 
+#, fuzzy
+msgid "Snapshot already on source."
+msgstr "Snapshot sudah sesuai target."
+
 msgid "Snapshot already on target."
 msgstr "Snapshot sudah sesuai target."
 
@@ -1051,6 +1135,9 @@ msgstr "Status Awal"
 
 msgid "Subvolume"
 msgstr "Subvolume"
+
+msgid "Supported modes:"
+msgstr ""
 
 msgid "Suppress normal output."
 msgstr "Menekan keluaran normal."
@@ -1093,6 +1180,9 @@ msgstr "Bin rm target"
 
 msgid "Target rmdir bin"
 msgstr "Bin rmdir target"
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
+msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "Ambit dapat ditentukan secara manual menggunakan opsi--ambit."
@@ -1153,9 +1243,17 @@ msgstr "Konfigurasi tidak dikenal."
 msgid "Unknown global option '%s'."
 msgstr "Opsi global tidak dikenal '%s'."
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Tipe '%s' tidak dikenal."
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Opsi tidak dikenal '%s' untuk perintah '%s'."
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Perintah '%s' tidak dikenal."
 
 #, c-format
 msgid "Unknown type '%s'."
@@ -1251,11 +1349,18 @@ msgstr "snbk list"
 msgid "snbk list-configs"
 msgstr "snbk list-configs"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "snbk delete [angka]"
+
 msgid "snbk transfer [numbers]"
 msgstr "snbk transfer [angka]"
 
 msgid "snbk transfer-and-delete"
 msgstr "snbk transfer-and-delete"
+
+msgid "snbk visualize <mode>"
+msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "penggunaan: snapper [--global-options] <command> [--command-options] [command-arguments]"
