--- a/po/km.po
+++ b/po/km.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper.km\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Khmer (Central) <https://l10n.opensuse.org/projects/snapper/master/km/>\n"
@@ -192,6 +192,20 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -240,6 +254,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -343,6 +369,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -385,6 +414,9 @@ msgstr ""
 msgid "--version"
 msgstr ""
 
+msgid "A backup-config must be specified to run this command."
+msgstr ""
+
 #, fuzzy
 msgid "ACL error."
 msgstr "បង្កើត​កំហុស"
@@ -425,6 +457,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -516,6 +552,10 @@ msgid "Command 'status' needs one argument."
 msgstr "ពាក្យ​បញ្ជា​ 'status' ត្រូវ​ការ​អាគុយម៉ង់​មួយ ។"
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "ពាក្យ​បញ្ជា 'create' មិន​ត្រូវ​ការ​អាគុយម៉ង់ ។"
+
+#, fuzzy
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "ពាក្យ​បញ្ជា 'create' មិន​ត្រូវ​ការ​អាគុយម៉ង់ ។"
 
@@ -525,6 +565,10 @@ msgstr "ពាក្យ​បញ្ជា​ 'mount' ត្រូវការ​
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr "ពាក្យ​បញ្ជា​ 'undochange' ត្រូវការ​អាគុយម៉ង់​យ៉ាងតិច​មួយ ។"
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "ពាក្យ​បញ្ជា​ 'status' ត្រូវ​ការ​អាគុយម៉ង់​មួយ ។"
 
 #, fuzzy
 msgid "Command 'xadiff' needs at least one argument."
@@ -907,6 +951,9 @@ msgstr ""
 msgid "No permissions."
 msgstr "(បិទ​សិទ្ធិ​ជា​​ម្ចាស់)"
 
+msgid "Notice:"
+msgstr ""
+
 #, fuzzy
 msgid "Number of corresponding pre snapshot."
 msgstr "\t--pre-number <number>\t\tចំនួន​រូបថតពី​មុន​ដែល​ត្រូវ​គ្នា​ ។"
@@ -937,6 +984,10 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+#, fuzzy
+msgid "Options for the 'visualize' command:"
+msgstr "    ជម្រើស​សម្រាប់​ពាក្យ​បញ្ជា 'list' ៖"
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr ""
@@ -944,6 +995,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "រក​មិន​ឃើញ​ឯកសារ '%s' ។"
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -993,6 +1048,9 @@ msgstr "កំពុង​ប្រៀបធៀប​រូបថត..."
 msgid "Probing target snapshots."
 msgstr "កំពុង​ប្រៀបធៀប​រូបថត..."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -1008,6 +1066,13 @@ msgstr "\t--input, -i <file>\t\tអាន​ឯកសារ​ដែល​នឹ
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "ការ​លុប CA បាន​បរាជ័យ ៖ %1 ។"
 
 #, fuzzy
 msgid "Run command and create pre and post snapshots."
@@ -1030,6 +1095,19 @@ msgstr ""
 msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1123,6 +1201,10 @@ msgid "Snapshot '%u' not found."
 msgstr "រក​មិន​ឃើញ​រូបថត '%u' ។"
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "បាន​បរាជ័យ​ក្នុង​ការ​បង្កើត​ការ​កំណត់​រចនាសម្ព័ន្ធ (%s) ។"
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "បាន​បរាជ័យ​ក្នុង​ការ​បង្កើត​ការ​កំណត់​រចនាសម្ព័ន្ធ (%s) ។"
 
@@ -1150,6 +1232,9 @@ msgstr ""
 
 msgid "Subvolume"
 msgstr "ភាគ​រង"
+
+msgid "Supported modes:"
+msgstr ""
 
 #, fuzzy
 msgid "Suppress normal output."
@@ -1192,6 +1277,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1258,9 +1346,17 @@ msgstr "ពាក្យបញ្ជា​ដែល​មិនស្គាល់
 msgid "Unknown global option '%s'."
 msgstr "មិន​ស្គាល់​ជម្រើស​សកល '%s' ។"
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "មិន​ស្គាល់​ពាក្យ​បញ្ជា '%s' ។"
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "មិន​ស្គាល់​ជម្រើស​ '%s' សម្រាប់​ពាក្យ​បញ្ជា '%s' ។"
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "មិន​ស្គាល់​ពាក្យ​បញ្ជា '%s' ។"
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1364,10 +1460,17 @@ msgstr "\tការ​រាយ​កម្មវិធី​ថត"
 msgid "snbk list-configs"
 msgstr "\tការ​កំណត់​រចនាសម្ព័ន្ធ​នៃ​ការ​រាយ​កម្មវិធី​ថត"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "\tលុប​កម្មវិធី​ថត <number>"
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
