--- a/po/lt.po
+++ b/po/lt.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LCN (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Lithuanian <https://l10n.opensuse.org/projects/snapper/master/lt/>\n"
@@ -186,6 +186,20 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -234,6 +248,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -333,6 +359,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -370,6 +399,9 @@ msgid "--verbose, -v"
 msgstr ""
 
 msgid "--version"
+msgstr ""
+
+msgid "A backup-config must be specified to run this command."
 msgstr ""
 
 #, fuzzy
@@ -412,6 +444,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -503,6 +539,10 @@ msgid "Command 'status' needs one argument."
 msgstr ""
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "„create-config“ komandai reikia vieno argumento."
+
+#, fuzzy
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "„create-config“ komandai reikia vieno argumento."
 
@@ -512,6 +552,10 @@ msgstr "„diff“ komandai reikia bent vieno argumento."
 
 msgid "Command 'undochange' needs at least one argument."
 msgstr ""
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "„cleanup“ komandai reikia vieno argumento."
 
 #, fuzzy
 msgid "Command 'xadiff' needs at least one argument."
@@ -881,6 +925,9 @@ msgstr ""
 msgid "No permissions."
 msgstr "Nėra leidimų."
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr ""
 
@@ -910,6 +957,9 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+msgid "Options for the 'visualize' command:"
+msgstr ""
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr ""
@@ -917,6 +967,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Rinkmena „%s“ nerasta."
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -964,6 +1018,9 @@ msgstr "lyginamos momentinės kopijos..."
 msgid "Probing target snapshots."
 msgstr "lyginamos momentinės kopijos..."
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Skaitymo/rašymo klaida."
@@ -976,6 +1033,13 @@ msgstr ""
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Klaida bandant pašalinti momentinę kopiją."
 
 msgid "Run command and create pre and post snapshots."
 msgstr ""
@@ -1003,6 +1067,22 @@ msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
 msgstr[3] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1099,6 +1179,10 @@ msgid "Snapshot '%u' not found."
 msgstr "Rinkmena „%s“ nerasta."
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "Klaida kuriant momentinę kopiją."
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "Klaida kuriant momentinę kopiją."
 
@@ -1125,6 +1209,9 @@ msgstr ""
 
 msgid "Subvolume"
 msgstr "Potomis"
+
+msgid "Supported modes:"
+msgstr ""
 
 msgid "Suppress normal output."
 msgstr ""
@@ -1165,6 +1252,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1229,9 +1319,17 @@ msgstr "Nežinoma konfigūracija."
 msgid "Unknown global option '%s'."
 msgstr "Nežinoma visuotinė parinktis „%s“."
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Nežinoma komanda „%s“."
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Nežinoma parinktis „%s“, kuri skirta komandai „%s“."
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Nežinoma komanda „%s“."
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1332,10 +1430,17 @@ msgstr ""
 msgid "snbk list-configs"
 msgstr "  Momentinių kopijų sąrašas:"
 
+#, fuzzy
+msgid "snbk restore [numbers]"
+msgstr "\tsnapper delete <numeris>"
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
