--- a/po/pa.po
+++ b/po/pa.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Punjabi <https://l10n.opensuse.org/projects/snapper/master/pa/>\n"
@@ -200,6 +200,20 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -247,6 +261,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -346,6 +372,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -383,6 +412,9 @@ msgid "--verbose, -v"
 msgstr ""
 
 msgid "--version"
+msgstr ""
+
+msgid "A backup-config must be specified to run this command."
 msgstr ""
 
 msgid "ACL error."
@@ -424,6 +456,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -525,6 +561,10 @@ msgid "Command 'status' needs one argument."
 msgstr "ਇੱਕ ਆਰਗੂਮਿੰਟ ਦੀ ਲੋੜ ਹੈ"
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr "create ਲਈ ਘੱਟੋ-ਘੱਟ 3 ਆਰਗੂਮਿੰਟ ਚਾਹੀਦੇ ਹਨ"
+
+#, fuzzy
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr "create ਲਈ ਘੱਟੋ-ਘੱਟ 3 ਆਰਗੂਮਿੰਟ ਚਾਹੀਦੇ ਹਨ"
 
@@ -535,6 +575,10 @@ msgstr "get ਨੂੰ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਆਰਗੂਮਿੰਟ 
 #, fuzzy
 msgid "Command 'undochange' needs at least one argument."
 msgstr "get ਨੂੰ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਆਰਗੂਮਿੰਟ ਲੋੜੀਦਾ ਹੈ"
+
+#, fuzzy
+msgid "Command 'visualize' needs one argument."
+msgstr "ਇੱਕ ਆਰਗੂਮਿੰਟ ਦੀ ਲੋੜ ਹੈ"
 
 #, fuzzy
 msgid "Command 'xadiff' needs at least one argument."
@@ -914,6 +958,9 @@ msgstr ""
 msgid "No permissions."
 msgstr "ਅਧਿਕਾਰ ਪਾਬੰਦੀ ਹੈ"
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr ""
 
@@ -943,6 +990,9 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+msgid "Options for the 'visualize' command:"
+msgstr ""
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr ""
@@ -950,6 +1000,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "ਫਾਇਲ %1 ਰਿਪੋਜ਼ਟਰੀ ਵਿੱਚ ਮੌਜੂਦ ਨਹੀਂ ਹੈ।"
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -1000,6 +1054,9 @@ msgstr "ਬਣਾਇਆ ਗਿਆ: "
 msgid "Probing target snapshots."
 msgstr "ਅਣਜਾਣ ਕਿਸਮ ਹੈ।"
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -1013,6 +1070,13 @@ msgstr ""
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "CA ਹਟਾਉਣਾ ਫੇਲ੍ਹ ਹੋਇਆ: %1"
 
 msgid "Run command and create pre and post snapshots."
 msgstr ""
@@ -1036,6 +1100,20 @@ msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1127,6 +1205,10 @@ msgid "Snapshot '%u' not found."
 msgstr "%s '%s' ਨਹੀਂ ਲੱਭੀ"
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "ਸੰਰਚਨਾ ਫਾਇਲ ਪਾਰਸ ਕੀਤੀ ਜਾ ਰਹੀ ਹੈ..."
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "ਸੰਰਚਨਾ ਫਾਇਲ ਪਾਰਸ ਕੀਤੀ ਜਾ ਰਹੀ ਹੈ..."
 
@@ -1152,6 +1234,9 @@ msgid "Source State"
 msgstr ""
 
 msgid "Subvolume"
+msgstr ""
+
+msgid "Supported modes:"
 msgstr ""
 
 msgid "Suppress normal output."
@@ -1193,6 +1278,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1260,8 +1348,16 @@ msgid "Unknown global option '%s'."
 msgstr "ਅਣਜਾਣ ਗਲੋਬਲ ਚੋਣ "
 
 #, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "ਅਣਜਾਣ ਕਮਾਂਡ '%s'"
+
+#, fuzzy, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr "%s ਲਈ ਅਣਜਾਣੀ ਚੋਣ, ਅਣਡਿੱਠੀ ਕੀਤੀ: '%s'\n"
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "ਅਣਜਾਣ ਕਮਾਂਡ '%s'"
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1364,10 +1460,16 @@ msgstr ""
 "%s - PAM ਸੰਰਚਨਾ ਫਾਇਲਾਂ ਬਣਾਓ।\n"
 "\n"
 
+msgid "snbk restore [numbers]"
+msgstr ""
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
