--- a/po/wa.po
+++ b/po/wa.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yast memory\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-13 14:35+0200\n"
+"POT-Creation-Date: 2026-01-28 14:27+0100\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Walloon <https://l10n.opensuse.org/projects/snapper/master/wa/>\n"
@@ -183,6 +183,20 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s continued"
+msgstr ""
+
+#, c-format
+msgid "%s killed by signal %d"
+msgstr ""
+
+#. For system(3), only WIFEXITED or WIFSIGNALED should be possible.
+#, c-format
+msgid "%s stopped"
+msgstr ""
+
 msgid "'btrfs send | btrfs receive' failed."
 msgstr ""
 
@@ -230,6 +244,18 @@ msgid "(Target) Received UUID"
 msgstr ""
 
 msgid "(Target) UUID"
+msgstr ""
+
+msgid "- A backup-config must be specified to run this command."
+msgstr ""
+
+msgid "- Restart the `snapperd` service to make the restored snapshots visible immediately."
+msgstr ""
+
+msgid "- source-tree: Produce a tree diagram of the snapshots on the source."
+msgstr ""
+
+msgid "- target-tree: Produce a tree diagram of the snapshots on the target."
 msgstr ""
 
 msgid "--abbreviate"
@@ -329,6 +355,9 @@ msgstr ""
 msgid "--quiet, -q"
 msgstr ""
 
+msgid "--rankdir, -r"
+msgstr ""
+
 msgid "--read-only"
 msgstr ""
 
@@ -366,6 +395,9 @@ msgid "--verbose, -v"
 msgstr ""
 
 msgid "--version"
+msgstr ""
+
+msgid "A backup-config must be specified to run this command."
 msgstr ""
 
 #, fuzzy
@@ -408,6 +440,10 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+#, c-format
+msgid "Cannot find the node of UUID %s"
 msgstr ""
 
 msgid "Character separator for CSV output format."
@@ -490,6 +526,9 @@ msgstr ""
 msgid "Command 'status' needs one argument."
 msgstr ""
 
+msgid "Command 'transfer-and-delete' does not support operating on a single snapshot."
+msgstr ""
+
 msgid "Command 'transfer-and-delete' does not take arguments."
 msgstr ""
 
@@ -497,6 +536,9 @@ msgid "Command 'umount' needs at least one argument."
 msgstr ""
 
 msgid "Command 'undochange' needs at least one argument."
+msgstr ""
+
+msgid "Command 'visualize' needs one argument."
 msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
@@ -870,6 +912,9 @@ msgstr ""
 msgid "No permissions."
 msgstr "Pont d' rastrindaedje VJ"
 
+msgid "Notice:"
+msgstr ""
+
 msgid "Number of corresponding pre snapshot."
 msgstr ""
 
@@ -899,6 +944,9 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+msgid "Options for the 'visualize' command:"
+msgstr ""
+
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
 msgstr ""
@@ -906,6 +954,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Parent node %s not found."
+msgstr "Apontyî"
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
@@ -953,6 +1005,9 @@ msgstr "Discrijhaedje"
 msgid "Probing target snapshots."
 msgstr "Estat del rantoele nén cnoxhou"
 
+msgid "Produce a specific graph in Graphviz DOT format:"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Aroke I/O"
@@ -965,6 +1020,13 @@ msgstr ""
 
 msgid "Read-Only"
 msgstr ""
+
+msgid "Restore:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Restoring snapshot %d."
+msgstr "Dj' analijhe les fitchîs d' apontiaedje..."
 
 msgid "Run command and create pre and post snapshots."
 msgstr ""
@@ -988,6 +1050,20 @@ msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
 msgstr[0] ""
 msgstr[1] ""
+
+#, c-format
+msgid "Running restore failed for %d of %ld backup config."
+msgid_plural "Running restore failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running restore for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running restore for backup config '%s'."
+msgstr ""
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -1080,6 +1156,10 @@ msgid "Snapshot '%u' not found."
 msgstr "Apontyî"
 
 #, fuzzy
+msgid "Snapshot already on source."
+msgstr "Dj' analijhe les fitchîs d' apontiaedje..."
+
+#, fuzzy
 msgid "Snapshot already on target."
 msgstr "Dj' analijhe les fitchîs d' apontiaedje..."
 
@@ -1106,6 +1186,9 @@ msgid "Source State"
 msgstr ""
 
 msgid "Subvolume"
+msgstr ""
+
+msgid "Supported modes:"
 msgstr ""
 
 msgid "Suppress normal output."
@@ -1147,6 +1230,9 @@ msgid "Target rm bin"
 msgstr ""
 
 msgid "Target rmdir bin"
+msgstr ""
+
+msgid "The 'rankdir' diagram attribute of Graphviz. Defaults to 'LR'."
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -1213,9 +1299,17 @@ msgstr "Djin nén cnoxhowe"
 msgid "Unknown global option '%s'."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Unknown mode '%s'."
+msgstr "Dji n' sai enonder l' comande «%s»"
+
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Unknown rankdir '%s'."
+msgstr "Dji n' sai enonder l' comande «%s»"
 
 #, fuzzy, c-format
 msgid "Unknown type '%s'."
@@ -1317,10 +1411,16 @@ msgstr ""
 msgid "snbk list-configs"
 msgstr "Disfacer l' profil"
 
+msgid "snbk restore [numbers]"
+msgstr ""
+
 msgid "snbk transfer [numbers]"
 msgstr ""
 
 msgid "snbk transfer-and-delete"
+msgstr ""
+
+msgid "snbk visualize <mode>"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
